camera,pdf,library reading,settings

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,11 @@
             android:exported="false"
             android:theme="@style/Theme.BookBuddy" />
 
+        <activity
+            android:name=".ReaderActivity"
+            android:exported="false"
+            android:theme="@style/Theme.BookBuddy" />
+
     </application>
 
 </manifest>
