--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,6 +59,11 @@
             android:exported="false"
             android:theme="@style/Theme.BookBuddy" />
 
+        <activity
+            android:name=".OcrResultActivity"
+            android:exported="false"
+            android:theme="@style/Theme.BookBuddy" />
+
     </application>
 
 </manifest>
