--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,6 +19,9 @@ pdfboxAndroid = "2.0.27.0"
 recyclerview = "1.4.0"
 tessTwo = "9.1.0"
 textRecognition = "16.0.1"
+playServicesMlkitTextRecognitionJapanese = "16.0.1"
+playServicesMlkitTextRecognitionKorean = "16.0.1"
+playServicesMlkitTextRecognitionChinese = "16.0.1"
 
 [libraries]
 appcompat-v161 = { module = "androidx.appcompat:appcompat", version.ref = "appcompatVersion" }
@@ -40,6 +43,9 @@ pdfbox-android = { module = "com.tom-roush:pdfbox-android", version.ref = "pdfbo
 recyclerview = { module = "androidx.recyclerview:recyclerview", version.ref = "recyclerview" }
 tess-two = { module = "com.rmtheis:tess-two", version.ref = "tessTwo" }
 text-recognition = { module = "com.google.mlkit:text-recognition", version.ref = "textRecognition" }
+play-services-mlkit-text-recognition-japanese = { group = "com.google.android.gms", name = "play-services-mlkit-text-recognition-japanese", version.ref = "playServicesMlkitTextRecognitionJapanese" }
+play-services-mlkit-text-recognition-korean = { group = "com.google.android.gms", name = "play-services-mlkit-text-recognition-korean", version.ref = "playServicesMlkitTextRecognitionKorean" }
+play-services-mlkit-text-recognition-chinese = { group = "com.google.android.gms", name = "play-services-mlkit-text-recognition-chinese", version.ref = "playServicesMlkitTextRecognitionChinese" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
