--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,8 @@ buildscript {
     }
     dependencies {
         // Keep your classpath dependencies for build tools
-        classpath 'com.android.tools.build:gradle:8.12.0' // Or your current AGP version
+        classpath 'com.android.tools.build:gradle:8.13.1' // Or your current AGP version
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.22'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files (e.g., app/build.gradle)
     }
