--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,12 +37,19 @@ android {
 
     buildFeatures {
         viewBinding true
+        compose true
+    }
+
+    composeOptions {
+        kotlinCompilerExtensionVersion "1.4.8"
     }
 
     packagingOptions {
         resources {
             pickFirst 'META-INF/versions/9/module-info.class'
             pickFirst 'com/tom_roush/pdfbox/resources/glyphlist/glyphlist.txt'
+            exclude("META-INF/AL2.0")
+            exclude("META-INF/LGPL2.1")
         }
     }
 }
@@ -54,9 +61,16 @@ dependencies {
 
     // ML Kit Text Recognition
     implementation 'com.google.mlkit:text-recognition:16.0.1'
+    implementation 'com.google.mlkit:text-recognition-devanagari:16.0.1'
 
     // PDF Processing
     implementation 'com.tom-roush:pdfbox-android:2.0.27.0'
+
+    // EPUB Processing
+    implementation('nl.siegmann.epublib:epublib-core:3.1') {
+        exclude group: 'net.sf.kxml', module: 'kxml2'
+        exclude group: 'xmlpull', module: 'xmlpull'
+    }
 
     // Lottie Animations
     implementation 'com.airbnb.android:lottie:6.7.1'
@@ -70,12 +84,20 @@ dependencies {
 
     // MultiDex support library
     implementation 'androidx.multidex:multidex:2.0.1'
-    implementation 'com.google.android.gms:play-services-mlkit-text-recognition-japanese:16.0.1'
-    implementation 'com.google.android.gms:play-services-mlkit-text-recognition-korean:16.0.1'
-    implementation 'com.google.android.gms:play-services-mlkit-text-recognition-chinese:16.0.1'
+
+    // Jetpack Compose
+    def compose_version = "1.4.3"
+    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.material3:material3:1.1.1"
+    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+    implementation 'androidx.activity:activity-compose:1.7.2'
+    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
+
 
     // Testing dependencies
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0'
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
 }
