--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
             android:theme="@style/Theme.BookBuddy" />
 
         <activity
-            android:name=".PdfSelectorActivity"
+            android:name=".FileSelectorActivity"
             android:exported="false"
             android:theme="@style/Theme.BookBuddy" />
 
@@ -61,6 +61,11 @@
 
         <activity
             android:name=".OcrResultActivity"
+            android:exported="false"
+            android.theme="@style/Theme.BookBuddy" />
+
+        <activity
+            android:name=".LanguageActivity"
             android:exported="false"
             android:theme="@style/Theme.BookBuddy" />
 
