--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,8 +92,10 @@ dependencies {
     def compose_version = "1.4.3"
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material3:material3:1.1.1"
+    implementation "androidx.compose.material:material-icons-extended:1.4.3"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.activity:activity-compose:1.7.2'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1'
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
 
