--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
         // Keep your classpath dependencies for build tools
         classpath 'com.android.tools.build:gradle:8.13.1' // Or your current AGP version
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.22'
+        classpath 'com.google.gms:google-services:4.4.0' // Firebase Google Services plugin
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files (e.g., app/build.gradle)
     }
