--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.gms.google-services' // Firebase Google Services plugin
 }
 
 android {
@@ -98,6 +99,20 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1'
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
+
+    // Firebase BoM (Bill of Materials) - manages Firebase versions
+    implementation platform('com.google.firebase:firebase-bom:32.7.0')
+
+    // Firebase services (versions managed by BoM) - Spark Plan Compatible
+    implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.google.firebase:firebase-database-ktx' // Realtime Database instead of Firestore
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+
+    // Note: Crashlytics, Storage, and Cloud Messaging require Blaze Plan (credit card)
+    // We use Realtime Database for all data storage including file metadata
+
+    // Google Play Services for Google Sign-In
+    implementation 'com.google.android.gms:play-services-auth:20.7.0'
 
 
     // Testing dependencies
